cabal-version:      2.4
name:               AdventOfCode2023
version:            0.1.0.0

synopsis: Solutions to Advent of Code 2021
license: Unlicense
author:             CastilloDel
maintainer:         delcastillodelarosadaniel@gmail.com


executable day1
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   day1/src
    default-language: Haskell2010

executable day2
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.0, hashmap ^>=1.3.3
    hs-source-dirs:   day2/src
    default-language: Haskell2010
